crates/plotnik-lib/tests/02-parser/recovery_validation/bare_reference_must_be_parenthesized.txt
Expr
------------------ DIAGNOSTICS -------------------
error: references must be parenthesized
 --> query.ptk:1:1
  |
1 | Expr
  | ^^^^
  |
help: wrap in parentheses
  |
1 - Expr
1 + (Expr)
  |
